--- a/UI-MVC/Views/Organisations/Details.cshtml
+++ b/UI-MVC/Views/Organisations/Details.cshtml
@@ -87,7 +87,7 @@
     <h1>Playlists</h1> in organisation
 </div>
 
-<table id="playlists">
+<table id="playlists" style="width: 100%">
         <tr>
             <th></th>
             <th></th>
