--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -53,7 +53,7 @@
 
 <div  id="playlistTable">
 <div id="playlist-view" style="margin-top: 0.2em">
-    @Html.Partial("PlaylistGrid", @Model)
+    @Html.Partial("PlaylistTable", @Model)
     </div>
 
     <div id="nowPlayingRow" style="margin-top: 1em">
