--- a/UI-MVC/Views/Playlist/PlaylistGrid.cshtml
+++ b/UI-MVC/Views/Playlist/PlaylistGrid.cshtml
@@ -10,6 +10,28 @@
                 <div class="darkoverlaygrid">
                     <p>@track.Track.Artist - @track.Track.Title</p>
                     <p>@TimeSpan.FromSeconds(track.Track.Duration).ToString().Replace("00:", "")</p>
+                    @{
+                        var thumbUpId = track.Id + "thumbUp";
+                        var thumbDownId = track.Id + "thumbDown";
+                        Vote vote = track.Votes.FirstOrDefault(v => v.User.Email == User.Identity.Name);
+                        if (vote == null)
+                        {
+                            <a onclick="vote('@thumbUpId', '1', '@track.Id')" style="cursor: pointer; margin:0; padding:0;"><i id="@thumbUpId" class="material-icons grey400">thumb_up</i></a>
+                            <a onclick="vote('@thumbDownId', '-1', '@track.Id')" style="cursor: pointer"><i id="@thumbDownId" class="material-icons grey400">thumb_down</i></a>
+                        }
+                        else
+                        {
+                            if (vote.Score == 1)
+                            {
+                                <a onclick="vote('@thumbUpId', '1', '@track.Id')" style="cursor: pointer; margin:0; padding:0;"><i id="@thumbUpId" data-voted="true" class="material-icons">thumb_up</i></a>
+                                <a style="cursor: pointer; margin:0; padding:0;"><i id="@thumbDownId" class="material-icons grey400">thumb_down</i></a>
+                            }
+                            else {
+                                <a style="cursor: pointer; margin:0; padding:0;"><i id="@thumbUpId" class="material-icons grey400">thumb_up</i></a>
+                                <a onclick="vote('@thumbDownId', '1', '@track.Id')" style="cursor: pointer; margin:0; padding:0;"><i id="@thumbDownId" data-voted="true" class="material-icons">thumb_down</i></a>
+                            }
+                        }
+                    }
                 </div>
                 
             </article>
