--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -827,6 +827,8 @@ footer {
   margin: 10px;
   position: relative;
   text-align: center; }
+  .chart .chart-text {
+    padding-top: 40%; }
   .chart span {
     display: block;
     font-size: 2em;
