--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -1103,6 +1103,10 @@ footer {
   position: relative;
   //box-sizing:border-box;
     text-align: center;
+    .chart-text{
+        padding-top:40%;
+
+    }
 
     span {
         display: block;
