--- a/UI-MVC/Views/Organisations/Details.cshtml
+++ b/UI-MVC/Views/Organisations/Details.cshtml
@@ -174,23 +174,24 @@ else
         }
     }
 }
-
-<h1>
-    Dashboard
-</h1>
+<div class="title">
+    <h1>
+        Dashboard
+    </h1>
+</div>
 
 <div class="flex-container" >
     <div class="card">
 
         <div class="chart" data-percent="@Model.Playlists.Count">
-            <div class="material-icons" style="font-size:5em;padding-top:30%;left:-125%">playlist</div>
+            <div class="material-icons" style="font-size:5em;padding-top:35%;left:-125%">playlist</div>
 
         <div class="chart-text">
             <span>@Model.Playlists.Count</span>playlists</div></div>
     </div>
     <div class="card">
         <div class="chart" data-percent="@Model.CoOrganiser.Count()">
-            <div class="material-icons" style="font-size:5em;padding-top:30%;left:5%;">people</div>
+            <div class="material-icons" style="font-size:5em;padding-top:35%;left:5%;">people</div>
 
             <div class="chart-text">
                 <span>@Model.CoOrganiser.Count()</span>Co organisers
@@ -198,7 +199,12 @@ else
     </div>
     <div class="card">
         <div>
-            <div class="chart" data-percent="83"><div class="chart-text"><span>50</span>Minutes</div></div>
+            <div class="chart" data-percent="@ViewBag.TotalMinutesOfPlaytime">
+                <div class="material-icons" style="font-size:5em;padding-top:35%;left:5%;">query_builder</div>
+
+                <div class="chart-text"><span>@ViewBag.TotalMinutesOfPlaytime</span>Minutes
+                </div>
+            </div>
         </div>
     </div>
 </div>
