--- a/UI-MVC/Views/Account/Register.cshtml
+++ b/UI-MVC/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model BB.UI.Web.MVC.Models.RegisterViewModel
+﻿@using BB.UI.Web.MVC.Models
+@model BB.UI.Web.MVC.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
@@ -15,12 +16,12 @@
 }
 
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new {role = "form", enctype= "multipart/form-data"  }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form", enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
     //@Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="col-md-7" id="custom-inputform-registration">
+     <div class="col-md-6" id="custom-inputform-registration">
         <div class="col-md-10 container-form">
             <input type="file" id="profileImage" name="profileImage" style="display: none" />
            
@@ -104,24 +105,29 @@
                 <input type="submit" class="btn btn-default pull-right create" value="Register as a new user" />
             </div>
         </div>
+    </div>}
+    <div class="col-md-6">
+        <div>
+            <section id="socialLoginForm">
+                @Html.Partial("~/Views/Account/_ExternalRegisterListPartial.cshtml", new ExternalLoginListViewModel { ReturnUrl = null })
+            </section>
+        </div>
     </div>
+    <div class="row"></div>
+        @section scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
+        <script>
+            document.getElementById('profile_click').onclick = function () {
+                document.getElementById('profileImage').click();
+            };
+            document.getElementById("profileImage").onchange = function () {
+                var reader = new FileReader();
 
-}
+                reader.onload = function (e) {
+                    document.getElementById("profile_click").src = e.target.result;
+                };
 
-@section scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
-<script>
-    document.getElementById('profile_click').onclick = function () {
-        document.getElementById('profileImage').click();
-    };
-    document.getElementById("profileImage").onchange = function () {
-        var reader = new FileReader();
-
-        reader.onload = function (e) {
-            document.getElementById("profile_click").src = e.target.result;
-        };
-
-        reader.readAsDataURL(this.files[0]);
-    };
-</script>
+                reader.readAsDataURL(this.files[0]);
+            };
+        </script>
