portal underligned when on my portal page

--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -98,6 +98,8 @@ header {
           float: none;
           width: 100%;
           margin-left: 0; } }
+      header ul.nav li .active {
+        border-bottom: 2px solid black; }
       header ul.nav li a {
         transition: border .2s;
         -webkit-transition: border .2s;
@@ -107,8 +109,6 @@ header {
         text-transform: lowercase;
         color: black; }
         header ul.nav li a:hover {
-          border-bottom: 2px solid black; }
-        header ul.nav li a:active {
           border-bottom: 2px solid black; }
 
 #banner {
