--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -133,6 +133,10 @@ header {
                 margin-left: 0;
             }
 
+               .active {
+                    border-bottom: 2px solid black; 
+            }
+
             a {
                 transition: border .2s;
                 -webkit-transition: border .2s;
@@ -145,9 +149,8 @@ header {
                 &:hover {
                     border-bottom: 2px solid black;
                 }
-                &:active {
-                    border-bottom: 2px solid black; 
-            }
+
+              
         }
     }
 }
