--- a/UI-MVC/Views/Organisations/Details.cshtml
+++ b/UI-MVC/Views/Organisations/Details.cshtml
@@ -134,7 +134,7 @@
                     @playlist.PlaylistTracks.Count()
                 </td>
                 <td>
-                @Html.ActionLink("View Playlist", "View", "Playlist", new { id = playlist.Id }, null)
+                @Html.ActionLink("View Playlist", "View", "Playlist", new { key = playlist.Key }, null)
                 </td>
                 
             </tr>
