--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -50,30 +50,40 @@
         </div>
     </div>
 }
-
-<div  id="playlistTable">
-<div id="playlist-view" style="margin-top: 0.2em">
-    @Html.Partial("PlaylistTable", @Model)
+<a id="viewGrid" style="cursor: pointer"><i class="material-icons btn-right" style="font-size: 2em; margin-right: 10px; margin-top: -5px">view_module</i></a>
+<a id="viewList" style="cursor: pointer"><i class="material-icons btn-right" style="font-size: 2em; margin-right: 10px; margin-top: -5px">view_headline</i></a>
+<div id="playlistTable">
+    
+    <div id="playlist-view" style="margin-top: 0.8em">
+        @Html.Partial("PlaylistTable", @Model)
     </div>
 
     <div id="nowPlayingRow" style="margin-top: 1em">
-        @if (((List<User>)ViewBag.Organisers).Any(p => p.Email == User.Identity.Name))
+        @if (((List<User>) ViewBag.Organisers).Any(p => p.Email == User.Identity.Name))
         {
             if (Model.PlaylistTracks.Count != 0)
             {
                 <a class="btn" id="playBtn"><i id="icon" class="material-icons">play_arrow</i> </a>
-                <a class="btn disabled" id="nextBtn"><i id="icon" class="material-icons">skip_next</i> </a>
             }
             else
             {
                 <a class="btn disabled" id="playBtn"><i id="icon" class="material-icons">play_arrow</i> </a>
             }
+            if (Model.PlaylistTracks.Count > 1)
+            {
+                <a class="btn" id="nextBtn"><i class="material-icons">skip_next</i> </a>
+            }
+            else
+            {
+                <a class="btn disabled" style="display: none" id="nextBtn"><i class="material-icons">skip_next</i> </a>
+            }
         }
         else
         {
-            <a class="btn" id="playBtn" style="display: none"><i id="icon" class="material-icons">play_arrow</i> </a>
-            <a class="btn disabled" style="display: none" id="nextBtn"><i id="icon" class="material-icons">skip_next</i> </a>
+            <a class="btn " id="playBtn" style="display: none"><i id="icon" class="material-icons">play_arrow</i> </a>
+            <a class="btn disabled" style="display: none" id="nextBtn"><i class="material-icons">skip_next</i> </a>
         }
+
 
         @if (Request.IsAuthenticated)
         {
@@ -225,6 +235,7 @@
     <script src="~/Scripts/jquery.signalR-2.2.0.js"></script>
     <script src="~/signalr/hubs"></script>
     <script>
+        var gridView = false;
         var playing = false;
         var listening = false;
         var intervalId = 0;
@@ -376,10 +387,18 @@
             if (listening) {
                 listening = false;
             } else {
-            listening = true;
+                listening = true;
             }
             toggle(document.getElementById('tuneinbutton'));
             play.server.playLive("@Model.Id");
+        });
+        $('#viewList').click(function() {
+            gridView = false;
+            updatePlaylist();
+        });
+        $('#viewGrid').click(function() {
+            gridView = true;
+            updatePlaylist();
         });
 
         function cue_and_play(data, seconds) {
@@ -505,13 +524,19 @@
                 method: 'POST',
                 data: { playlistId: @ViewBag.PlaylistId, id: id },
                 async: false
-            }).done(function() {
+            }).done(function(data) {
+                
                 window.location.href = @ViewBag.PlaylistId + '#close';
                 updatePlaylist();
                 var playBtn = document.getElementById('playBtn');
                 playBtn.className = 'btn';
                 playBtn.addEventListener("click", getNextTrack);
                 play.server.addTrack("@Model.Id");
+                if (data > 1 || (data ===1 && currentTrack != null)) {
+                    var nxtBtn = document.getElementById('nextBtn');
+                    nxtBtn.className = 'btn';
+                    nxtBtn.style.display = "inline-block";
+                }
             }).fail(function() {
                 notie.alert(3, 'You cannot add a song that is already in the list or is already played', 2.5);
             });
@@ -566,8 +591,8 @@
             var nextButton = document.getElementById("nextBtn");
             if (nextButton != null)
                 nextButton.addEventListener("click", function() {
-                getNextTrack();
-            });
+                    getNextTrack();
+                });
             $.connection.hub.start().done(function() {
                 play.server.joinGroup("@Model.Id");
             });
@@ -668,8 +693,9 @@
                         setInterval(updateTime, 50);
                     });
                     var nextButton = document.getElementById("nextBtn");
+                    
                     if (nextButton != null) {
-                        if (data.nextTracks === 1) {
+                        if (data.NextTracks === 1) {
                             nextButton.className = 'btn disabled';
                         } else {
                             nextButton.className = 'btn';
@@ -730,11 +756,20 @@
         }
 
         function updatePlaylist() {
-            $('#playlist-view').load('/Playlist/GetPlaylist/', { id: @ViewBag.PlaylistId });
-            var rowCount = $('#playlist-tracks tr').length;
-            if (rowCount >= 1 && playing) {
-                var nextButton = document.getElementById("nextBtn");
-                nextButton.className = 'btn';
+            if (gridView) {
+                $("#playlist-view").animate({opacity: 0},50, function() {
+                    $('#playlist-view').load('/Playlist/GetPlaylistGrid/', { id: @ViewBag.PlaylistId }, function() {
+                        $("#playlist-view").animate({opacity: 1},50);
+                        
+                    });
+                });
+            } else {
+                $("#playlist-view").animate({opacity: 0},50, function() {
+                    $('#playlist-view').load('/Playlist/GetPlaylist/', { id: @ViewBag.PlaylistId }, function() {
+                        $("#playlist-view").animate({opacity: 1},50);        
+                    });
+                });
+
             }
         }
 
@@ -803,9 +838,9 @@
         }
 
         var markupPlaylist = '<li class="playlist" data-id="${Description}">' +
-               '<img class="thumbnail" src="${ImageUrl}"/>' +
-               '<span class="artist">${Name}</span>' +
-               '</li>';
+            '<img class="thumbnail" src="${ImageUrl}"/>' +
+            '<span class="artist">${Name}</span>' +
+            '</li>';
         $.template("playlistTemplate", markupPlaylist);
 
         $.ajaxSetup({
@@ -877,36 +912,79 @@
     </script>
 <script src="../../Scripts/modernizr.js"></script>
 <script>
-        $(function () {
+    $(function () {
 
-            var $container = $('#ib-container'),
-                $articles = $container.children('article'),
-                timeout;
+        var $container = $('#ib-container'),
+            $articles = $container.children('article'),
+            timeout;
 
-            $articles.on('mouseenter', function (event) {
+        $articles.on('mouseenter', function (event) {
 
-                var $article = $(this);
-                clearTimeout(timeout);
-                timeout = setTimeout(function () {
+            var $article = $(this);
+            clearTimeout(timeout);
+            timeout = setTimeout(function () {
 
-                    if ($article.hasClass('active')) return false;
+                if ($article.hasClass('active')) return false;
 
-                    $articles.not($article.removeClass('blur').addClass('active'))
-                             .removeClass('active')
-                             .addClass('blur');
+                $articles.not($article.removeClass('blur').addClass('active'))
+                    .removeClass('active')
+                    .addClass('blur');
 
-                }, 65);
-
-            });
-
-            $container.on('mouseleave', function (event) {
-
-                clearTimeout(timeout);
-                $articles.removeClass('active blur');
-
-            });
+            }, 65);
 
         });
+
+        $container.on('mouseleave', function (event) {
+
+            clearTimeout(timeout);
+            $articles.removeClass('active blur');
+
+        });
+
+    });
+    function changeColor(element, color) {
+        document.getElementById(element).style.color = color;
+    }
+
+    function vote(element, vote, id) {
+        if ("@Request.IsAuthenticated" === "False") {
+            notie.alert(3, "You need to login to vote", 2.5)
+            return
+        }
+        if ($('#'+element).attr("data-voted")!= null) {
+            unVote(element, id)
+            return
+        }
+        $.ajax({
+            url: '@Url.Action("AddVote")',
+            method: 'POST',
+            data: {vote: vote, id: id},
+        }).done(function () {
+            changeColor(element, "black")
+            //updatePlaylist()
+            notie.alert(1,"Got it!", 2.5)
+        }).fail(
+            function (xhr, status, error) {
+                if (xhr.status == 400) { notie.alert(3,"You have reached your vote limit for this playlist", 2.5); }
+                else
+                { notie.alert(3,"Error creating vote", 2.5); }
+            })
+    }
+
+    function unVote(element, id) {
+        $.ajax({
+            url: '@Url.Action("UnVote")',
+            method: 'POST',
+            data: { id: id },
+        }).done(function() {
+            changeColor(element, "#BDBDBD")
+            //updatePlaylist()
+            notie.alert(1, "Got it!", 2.5)
+        }).fail(function() {
+                notie.alert(3, "Error deleting vote", 2.5)
+            }
+        );
+    }
 </script>
 
 }
