--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -18,6 +18,9 @@
   #chatContainer #chatIcon {
     cursor: pointer;
     position: absolute;
+    padding-top: 5em;
+    padding-bottom: 5em;
+    margin-top: -5em;
     top: 50%;
     left: 4px;
     color: white; }
@@ -790,7 +793,7 @@ footer {
   position: relative; }
   #footerSlideContent #fullscreenbutton {
     color: white;
-    right: -10px;
+    right: 0;
     top: 1.2em;
     position: absolute;
     cursor: pointer; }
