--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -399,7 +399,7 @@ header {
     #playlist-tracks .track .albumart {
       width: 48px;
       height: 48px;
-      background-image: url(img/img/default_cover.png);
+      background-image: url("/Content/img/default_cover.png");
       display: inline-block;
       float: left;
       margin-right: .7em; }
@@ -456,7 +456,7 @@ header {
     left: 10%;
     bottom: 10%;
     background-size: contain;
-    background-image: url(img/default_cover.png); }
+    background-image: url("/Content/img/default_cover.png"); }
   #fullscreenplayer #nowPlayingArtist {
     position: absolute;
     left: 10%;
@@ -520,7 +520,7 @@ header {
         #fullscreenplayer #fullscreenComingUp ul li .albumart {
           width: 64px;
           height: 64px;
-          background-image: url(img/img/default_cover.png);
+          background-image: url(img/default_cover.png);
           vertical-align: middle; }
         #fullscreenplayer #fullscreenComingUp ul li .trackartist {
           margin-left: .8em;
@@ -803,6 +803,12 @@ footer {
     top: 1.2em;
     position: absolute;
     cursor: pointer; }
+  #footerSlideContent #thumbnail {
+    height: 75px;
+    width: 75px;
+    margin-top: 1em;
+    background-size: contain;
+    background-image: url("/Content/img/default_cover.png"); }
 
 #comments ul {
   padding-left: 0; }
