--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -160,7 +160,7 @@
         <table style="width: 100%; margin-top: -15px">
             <tr>
                 <td style="width: 5%">
-                    <img src="~/Content/img/default_cover.png" id="thumbnail" class="round" style="height: 75px; width: 75px; margin-top: 1em" />
+                    <img src="~/Content/img/default_cover.png" id="thumbnail" class="round" />
                 </td>
                 <td style="width: 95%">
                     <div class="title" style="margin-top: 0.5em; margin-right: 1.5em">
@@ -835,8 +835,6 @@
                 for(var i=0; i<tracks.length - 1; i++) {
                     var playlistTrack = tracks[i];
 
-                    console.log(playlistTrack);
-
                     var itemcls = "";
                     if (i === 0) itemcls = "first";
                     if (i === 1) itemcls = "second";
@@ -853,8 +851,6 @@
 
                     $('#fullscreenComingUp > ul').append(itemHtml);
                 }
-
-                console.log(data);
 
             }).fail(function() {
                 notie.alert(3, 'Error refreshing upcoming tracks', 2.5);
