--- a/UI-MVC/Views/Playlist/View.cshtml
+++ b/UI-MVC/Views/Playlist/View.cshtml
@@ -97,8 +97,8 @@
         }
     </div>
 
-    <div id="addTrackModal" class="modal" style="margin-top: -150px">
-        <div class="modal-content" style="width: 30%; height: 60%; min-width: 340px; overflow: hidden">
+    <div id="addTrackModal" class="modal">
+        <div class="modal-content">
             <a href="#close" id="close-modal" title="Close" class="close">X</a>
             <div class="modal-body" style="height: 100%; width: 100%;">
                 @{
@@ -108,8 +108,8 @@
         </div>
     </div>
 
-    <div id="addPlaylistModal" class="modal" style="margin-top: -150px">
-        <div class="modal-content" style="width: 30%; height: 60%; min-width: 340px; overflow: hidden">
+    <div id="addPlaylistModal" class="modal">
+        <div class="modal-content">
             <a href="#closePlaylist" id="close-modal-playlist" title="Close" class="close">X</a>
             <div class="modal-body" style="height: 100%; width: 100%;">
                 @{
