Dashboard af (maar iemand anders mag het nog fancy maken, heb niet direct ideetjes) + fix nullreference todo

--- a/UI-MVC/Content/Site.css
+++ b/UI-MVC/Content/Site.css
@@ -851,6 +851,10 @@ footer {
     position: absolute;
     left: 0;
     top: 0; }
+  .chart .fit-in-circle {
+    font-size: 5em;
+    padding-top: 35%;
+    left: 5%; }
 
 .flex-container {
   display: -ms-flexbox;
