--- a/UI-MVC/Content/Site.scss
+++ b/UI-MVC/Content/Site.scss
@@ -1140,6 +1140,12 @@ footer {
     left: 0;
     top: 0;
   }
+
+    .fit-in-circle{
+        font-size:5em;
+        padding-top:35%;
+        left:5%;
+    }
 }
 
 .flex-container {
