--- a/UI-MVC/Content/modal.css
+++ b/UI-MVC/Content/modal.css
@@ -11,7 +11,7 @@
 	-moz-transition: opacity 400ms ease-in;
 	transition: opacity 400ms ease-in;
 	pointer-events: none;
-    margin-top: -115px;
+    margin-top: -7%;
     overflow: hidden;
 }
 
